添加飞信配置
上一个版本忘记添加啦0_0

--- a/cfg.json.example
+++ b/cfg.json.example
@@ -9,4 +9,8 @@
         "SECERT": "-------------------------------------------------------",
         "my_phone_number": "需使用国际区号86，但不用带'+'号"
     }
+    "fetion":{
+        "user":"-----------------------------------------------------------",
+        "password":"-------------------------------------------------------"
+    }
 }
