--- a/cfg.json.example
+++ b/cfg.json.example
@@ -8,9 +8,10 @@
         "KEY": "----------------------------------------------------------",
         "SECERT": "-------------------------------------------------------",
         "my_phone_number": "需使用国际区号86，但不用带'+'号"
-    }
+    },
     "fetion":{
         "user":"-----------------------------------------------------------",
         "password":"-------------------------------------------------------"
-    }
+    },
+    "pushbullet":"---------------------------------------------------------"
 }
